syntax = "proto3";

package wireguard.v1;

option go_package = "github.com/pentops/wireguard-config-sidecar/gen/wireguard/v1;wg_pb";

message Server {
  string          config_path = 1;
  PrivateKey      private_key = 2;
  string          endpoint    = 3;
  string          cidr        = 4;
  repeated string dns         = 5;
  int64           listen_port = 6;
  Routes          routes      = 7;
  repeated Device devices     = 9;
}

message PrivateKey {
  oneof store {
    string env_var = 1;
  }
}

message Routes {
  repeated string relay  = 1;
  repeated string accept = 2;
}

message Device {
  string name       = 1;
  string public_key = 2;
  bool   revoked    = 3;
}

message Node {
  Interface interface = 1;
  repeated Peer peers = 2;
}

message Interface {
  string address = 1;

  optional int64  listen_port = 2;
  optional string private_key = 3;
  optional string dns         = 4;
  optional string pre_up      = 5;
  optional string post_up     = 6;
  optional string pre_down    = 7;
  optional string post_down   = 8;
}

message Peer {
  string public_key  = 1;
  string allowed_ips = 2;

  optional string comment       = 3;
  optional string preshared_key = 4;
  optional string endpoint      = 5;
}
